feat: create a mainRouter file to centralize routes and adjust the docs on swagger
